# localization_tools

hose_localization/: CMakeLists.txt  graspable_cylinder.rviz  package.xml  setup.py  walking.rviz  zeros.yaml
hose_localization/gripper_descriptions/: foot_description.urdf  left_gripper_v3.urdf  right_gripper_v3.urdf
hose_localization/launch/: ExperimentGraspableCylinderMarker.launch  ExperimentWalkingMarkers.launch  LaunchHoseMarkers.launch  LaunchWalkingMarkers.launch  TestGraspableCylinderMarker.launch  TestGripperMarker.launch  TestOpenRave.launch  TestSnapshotter.launch  TestWalkingMarker.launch  TestWyeMarker.launch
hose_localization/src/hose_localization/: cinder_block_marker.py  foot_marker.py  graspable_cylinder_marker.py  gripper_marker.py  moveable_button_marker.py  object_localizer.py  pointcloud2.py  reel_marker.py  stable_pointcloud_snapshotter.py  test_button_marker.py  wye_marker.py
