<?xml version="1.0"?>
<package>
  <name>hose_localization</name>
  <version>0.0.1</version>
  <description>The valve_localization package</description>
  <maintainer email="calder.pg@gmail.com">Calder Phillips-Grafflin</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>icp_server_msgs</build_depend>
  <build_depend>valve_planner_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>hubo_hose_task_planner_msgs</build_depend>
  <build_depend>hubo_planning_common</build_depend>
  <build_depend>python_orocos_kdl</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>icp_server_msgs</run_depend>
  <run_depend>valve_planner_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>hubo_hose_task_planner_msgs</run_depend>
  <run_depend>hubo_planning_common</run_depend>
  <run_depend>python_orocos_kdl</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
